# Rizzume

./: .env.secrets.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/config/: env.ts
frontend/src/lib/: api-client.ts  utils.ts
infra/: docker-compose.yml
infra/postgres/: init.sql
scripts/: bootstrap-env.sh
services/api-gateway/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/api/: router.py
services/api-gateway/app/api/endpoints/: audio.py  auth.py  interview.py  report.py
services/api-gateway/app/clients/: registry.py
services/api-gateway/app/core/: config.py  constants.py  proxy.py
services/api-gateway/app/middleware/: auth.py
services/api-gateway/tests/: conftest.py  test_health.py
services/audio-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/audio-service/app/api/: router.py  speech.py  transcriptions.py
services/audio-service/app/core/: config.py  constants.py
services/audio-service/app/providers/: __init__.py  openai_client.py  openai_stt.py  openai_tts.py
services/audio-service/app/schemas/: audio.py
services/audio-service/app/storage/: blob_client.py
services/audio-service/app/worker/: celery_app.py  tasks.py
services/audio-service/tests/: conftest.py  test_health.py  test_speech.py  test_transcriptions.py
services/auth-service/: .env.example  README.md  pyproject.toml
services/auth-service/app/: main.py
services/auth-service/app/api/: auth.py  deps.py  router.py
services/auth-service/app/core/: config.py  constants.py
services/auth-service/app/models/: user.py
services/auth-service/app/repositories/: user_repository.py
services/auth-service/app/schemas/: user.py
services/auth-service/app/services/: auth_service.py
services/auth-service/app/utils/: security.py
services/auth-service/migrations/: env.py
services/auth-service/migrations/versions/: 38a69415befb_create_users_table.py
services/auth-service/tests/: conftest.py  test_auth.py  test_health.py
services/conversation-service/: .env.example  README.md  pyproject.toml
services/conversation-service/app/api/: router.py  transcripts.py
services/conversation-service/app/core/: config.py  constants.py
services/conversation-service/app/db/: base.py  redis.py
services/conversation-service/app/models/: transcript.py
services/conversation-service/app/repositories/: session_cache.py  transcript_repository.py
services/conversation-service/app/schemas/: transcript.py
services/conversation-service/app/services/: transcript_service.py
services/conversation-service/migrations/: env.py
services/conversation-service/migrations/versions/: 9d88a221d53a_create_conversation_turns_table.py
services/conversation-service/tests/: conftest.py  test_health.py  test_transcripts.py
services/interview-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/interview-service/app/: main.py
services/interview-service/app/api/: deps.py  interviews.py  router.py
services/interview-service/app/clients/: conversation_client.py
services/interview-service/app/core/: config.py  constants.py  logging.py
services/interview-service/app/engine/: __init__.py  client.py  feedback_generator.py  interview_engine.py  interview_planner.py  question_generator.py  types.py
services/interview-service/app/models/: interview.py
services/interview-service/app/repositories/: interview_repository.py
services/interview-service/app/schemas/: interview.py
services/interview-service/app/services/: interview_service.py
services/interview-service/app/storage/: blob_client.py
services/interview-service/app/utils/: pdf_extractor.py
services/interview-service/migrations/: env.py
services/interview-service/migrations/versions/: 6aec087192f8_create_interviews_table.py  bc1bd691fa72_add_resume_fields_and_per_interview_max_.py
services/interview-service/tests/: conftest.py  test_health.py  test_interviews.py
services/report-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/report-service/app/: main.py
services/report-service/app/api/: router.py
services/report-service/app/core/: config.py  constants.py
services/report-service/app/db/: session.py
services/report-service/app/worker/: celery_app.py  tasks.py
services/report-service/migrations/: env.py
services/report-service/tests/: conftest.py  test_health.py
