[project]
name = "interview-service"
version = "0.1.0"
description = "Session/interview logic + the OpenAI interview engine. Owns interview_db."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "openai>=1.50",
    "httpx>=0.27",
    "azure-storage-blob>=12.23",
    "pypdf>=5.0",
    "python-multipart>=0.0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
# Session-scoped, not the default per-test loop: app/db/session.py's async
# engine is a module-level singleton (matching production, where one event
# loop runs for the process lifetime). A fresh loop per test would leave its
# pooled asyncpg connections bound to an already-closed loop by the next test.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
